refactor : 쿼리 수정에 따라 로직 변경